--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -8,6 +8,10 @@ layout: default
     {% for post in site.posts %}
         {% if post.categories contains page.category %}
             <li class="post-teaser">
+                <a href="https://github.com/yinyurr/HerLittleMonsterPri/blob/2c569f50f58599b071509cd78580acfed51e4caf/081.markdown">
+                    <span class="post-teaser__title">{{ post.title }}</span>
+                    <span class="post-teaser__date">{{ post.date | date: "%d %B %Y" }}</span>
+                </a>
                 <a href="{{ post.url | prepend: site.baseurl }}">
                     <span class="post-teaser__title">{{ post.title }}</span>
                     <span class="post-teaser__date">{{ post.date | date: "%d %B %Y" }}</span>
