--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -9,8 +9,9 @@ layout: default
         {% if post.categories contains page.category %}
             <li class="post-teaser">
                 <a href="https://github.com/yinyurr/HerLittleMonsterPri/blob/2c569f50f58599b071509cd78580acfed51e4caf/081.markdown">
-                    <span class="post-teaser__title">这是一个测试</span>
+                    <span class="post-teaser__title">{这是一个测试}</span>
                     <span class="post-teaser__date">时间</span>
+                    我在这里
                 </a>
                 <a href="{{ post.url | prepend: site.baseurl }}">
                     <span class="post-teaser__title">{{ post.title }}</span>
