--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <a href="/" class="logo">{{ site.title }}</a>
 
         <ul class="menu">
-            <li class="menu__entry"><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
+            <li class="menu__entry"><a href="https://github.com/yinyurr/HerLittleMonsterPri/blob/2c569f50f58599b071509cd78580acfed51e4caf/081.markdown">About</a></li>
             <li class="menu__entry"><a href="{{ '/' | prepend: site.baseurl }}">Blog</a></li>
         </ul>
     </div>
